# renewable-energy-forecasting-pipeline

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: airflow_config.yaml  paths.yaml  project_config.yaml  runtime_config.yaml  spark_config.yaml
configs/schema/: isd_raw_schema.json
configs/users/: syed.yaml  template.yaml
data/raw/isd_sample/2019/: 80420099999.csv  94105099999.csv
data/raw/isd_sample/2022/: 03105099999.csv  72103799999.csv
data/raw/isd_sample/2025/: 81992099999.csv  99734899999.csv
data_contracts/: parsed_to_clean_mapping.md  quality_flag_rules.md  raw_to_parsed_mapping.md
docs/architecture/: data_flow.md
docs/experiments/: dataset_viability.md
docs/presentation/: question_map.md
notebooks/: 01_dataset_understanding.ipynb  02_station_scope_and_coverage.ipynb
scripts/: bootstrap_repo.sh
src/common/: config.py  paths.py
src/ingestion/: discover_isd_files.py  station_filter.py  station_metadata_loader.py
