[project]
name = "renewable-energy-forecasting-pipeline"
version = "0.1.0"
description = "Wind energy forecasting pipeline using NOAA ISD data"
authors = [
    { name = "Your Team" }
]
requires-python = ">=3.10"

dependencies = [
    "pyspark>=3.5.0",
    "duckdb>=0.10.0",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.0",
    "boto3>=1.34.0",
    "datashader>=0.16.0",
    "matplotlib>=3.8.0",
    "plotly>=5.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
